add endpoint for generate new quiz
