# services/server/app/Http/Requests/GenerateNewQuizRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class SendMessageToChatRequest extends FormRequest
+class GenerateNewQuizRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -22,9 +22,14 @@ class SendMessageToChatRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'message' => [
+            'old_quiz_uuid' => [
                 'required',
-                'string',
+                'uuid',
+                'exists:quizzes,uuid'
+            ],
+            'summary' => [
+                'required',
+                'string'
             ],
         ];
     }
@@ -37,8 +42,11 @@ class SendMessageToChatRequest extends FormRequest
     public function messages(): array
     {
         return [
-            'required' => 'The message field is required.',
-            'string' => 'The message field must be a valid string.',
+            'old_quiz_uuid.required' => 'The old quiz UUID is required.',
+            'old_quiz_uuid.uuid' => 'The old quiz UUID must be a valid UUID.',
+            'old_quiz_uuid.exists' => 'The old quiz UUID must exist in the quizzes table.',
+            'summary.required' => 'The summary is required.',
+            'summary.string' => 'The summary must be a string.',
         ];
     }
 }
